# cairo-robot-interface

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: calibration_matrix.yaml  calibration_matrix_b.yaml
include/forward_kinematics/: forward_kinematics.h
launch/: fk_node.launch  fk_test.launch  server_node.launch  vrpn.launch
nodes/: optitrack_publisher.py  sawyer_interface_server.py  transform_lookup.py  transform_lookup_service.py
scripts/: end_effector_optitrack_calibration.py  kinematics_server_test.py  moveit_constraint_test.py  multi_pose_motion_plan.py  optitrack_calibration.py  plan_evaluation.py  plan_failure_test.py  point_collision_test.py  python_movegroup.py  record_full.py  record_pose.py  recorder_test.py  sample_joint_pub.py  sample_pose_array.py  test_calibration.py  test_trajectory_mapping.py  tf_broadcast.py  transform_lookup_test.py
src/: forward_kinematic_node.cpp  forward_kinematic_server.cpp
src/forward_kinematics/: forward_kinematics.cpp  forward_kinematics_client.py  forward_kinematics_node.cpp  forward_kinematics_service.cpp
src/kinematics_interface/: kinematics_servers.py  servers.py
src/lfd_environment/: config.json  constraints.py  interfaces.py  robot.py
src/path_constraints/: path_constraint_test.cpp
src/robot_clients/: abstract_clients.py  kinematics_clients.py  trajectory_client.py  transform_clients.py
src/robot_interface/: base_interface.py  moveit_interface.py
src/robot_servers/: transform_servers.py
src/sawyer_interface/: moveit_interface.py  recorder.py  sawyer_server.py
src/servers/: abstract_servers.py  kinematics_servers.py  optitrack_servers.py
src/test_moveit/: recorder.py
srv/: ForwardKinematics.srv  TransformLookup.srv  forward_kinematics.srv
std_poses/: gripper_down_elbow_up.csv  upright_elbow_down.csv
